# salesforce-cdp-connector

./: .env.template  .gitignore  BUILD.md  CONTRIBUTING.md  DEVELOPER_DOC.md  Makefile  PLUGIN_ARCHITECTURE.md  README.md  example.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: python-package.yml  python-publish.yml  v1-package.yml  v1-publish.yml  v2-package.yml  v2-publish.yml
examples/: example.py
salesforce-cdp-connector/: pyproject.toml
salesforce-cdp-connector-grpc/: pyproject.toml
salesforce-cdp-connector-grpc/src/salesforcecdpconnector/grpc/: __init__.py  client.py  connection.py  cursor.py
salesforce-cdp-connector/salesforcecdpconnector/: client.py  dbapi.py
salesforce-cdp-connector/src/salesforcecdpconnector/: auth.py  base.py  constants.py  dbapi.py  exceptions.py  utils.py
salesforce-cdp-connector/src/salesforcecdpconnector/connect_api/: __init__.py  client.py  connection.py  cursor.py
salesforce_datacloud_connector/: CHANGELOG.md  README.md  pyproject.toml
salesforce_datacloud_connector/salesforce_datacloud_connector/: __init__.py  _metadata_pg.py  connection.py  cursor.py  exceptions.py  metadata.py  types.py
salesforce_datacloud_connector/salesforce_datacloud_connector/api/: __init__.py  client.py  models.py
salesforce_datacloud_connector/salesforce_datacloud_connector/auth/: oauth.py
salesforce_datacloud_connector/salesforce_datacloud_connector/sql/: get_columns_query.sql  get_tables_query.sql
salesforce_datacloud_connector/tests/: test_api_client.py  test_auth.py  test_connection.py  test_cursor.py  test_e2e_real_datacloud.py  test_integration.py  test_metadata_pg.py
salesforcecdpconnector/: __init__.py  auth.py  authentication_helper.py  client.py  connection.py  constants.py  cursor.py  dbapi.py  exceptions.py  genie_table.py  metadata_processor.py  pandas_utils.py  parsed_query_result.py  query_result_parser.py  query_submitter.py  types.py  utils.py
src/salesforcecdpconnector/: __init__.py  auth.py  client.py  dbapi.py  types.py
tests/: test_authentication_helper.py  test_cursor.py  test_deprecation.py  test_metadata_processor.py  test_pandas_utils.py  test_query_result_parser.py  test_query_submitter.py
