[project]
name = "salesforce-cdp-connector"
version = "1.0.16"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
requires-python = ">=3.8"
description = "Salesforce Data Cloud Python Connector"
readme = "README.md"
authors = [{ name = "Data Cloud Query Developer Team", email = "datacloud-query-connector-owners@salesforce.com" }]
keywords = ["cdp", "salesforce", "dbapi"]
dependencies = [
    "pandas>=2.0.3",
    "pyarrow>=17.0.0",
    "pyjwt>=2.9.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "urllib3>=2.2.3",
]

[project.urls]
homepage = "https://github.com/forcedotcom/salesforce-cdp-connector"
source = "https://github.com/forcedotcom/salesforce-cdp-connector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "salesforcecdpconnector",
  "salesforcecdpconnector/*",
]

[tool.hatch.envs.default]
installer = "uv"

[dependency-groups]
dev = [
    "cryptography>=44.0.0",
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "responses>=0.25.6",
    "ruff>=0.9.6"
]

[tool.ruff.lint]
select = ["E9","F63","F7","F82", "E501"] # match existing checks from GitHub Action

[tool.ruff]
line-length = 127 # match existing checks from GitHub Action
