[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "salesforce-cdp-connector"
version = "1.0.17"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
requires-python = ">=3.8"
description = "Salesforce Data Cloud Python Connector - Monorepo"
readme = "README.md"
authors = [{ name = "Data Cloud Query Developer Team", email = "datacloud-query-connector-owners@salesforce.com" }]
keywords = ["cdp", "salesforce", "dbapi", "grpc"]

[project.urls]
homepage = "https://forcedotcom.com/salesforce-cdp-connector"
source = "https://forcedotcom.com/salesforce-cdp-connector"

[project.optional-dependencies]
dev = [
    "cryptography>=44.0.0",
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "responses>=0.25.6",
    "ruff>=0.9.6",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.ruff.lint]
select = ["E9","F63","F7","F82", "E501"]
line-length = 127

[tool.ruff]
line-length = 127

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 
