[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "salesforce-cdp-connector-grpc"
dynamic = ["version"]
license = "BSD-3-Clause"
requires-python = ">=3.8"
description = "Salesforce Data Cloud Python Connector - gRPC Client"
authors = [{ name = "Data Cloud Query Developer Team", email = "datacloud-query-connector-owners@salesforce.com" }]
keywords = ["cdp", "salesforce", "grpc", "client"]
dependencies = [
    "salesforcecdpconnector",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "loguru>=0.7.3",
]

[project.entry-points."salesforcecdpconnector.connections"]
grpc = "salesforcecdpconnector.grpc:Connection"

[project.urls]
homepage = "https://forcedotcom.com/salesforce-cdp-connector"
source = "https://forcedotcom.com/salesforce-cdp-connector"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
root = ".."

[tool.setuptools.packages.find]
where = ["src"]
include = ["salesforcecdpconnector"]

[tool.setuptools.package-data]
salesforcecdpconnector = ["py.typed"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.6"
]

[tool.ruff.lint]
select = ["E9","F63","F7","F82", "E501"]

[tool.ruff]
line-length = 127 