[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salesforce-datacloud-connector"
version = "2.0.0b1"
description = "Salesforce Data Cloud Python connector (V3 driver, beta)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
authors = [{name = "Salesforce"}]
dependencies = [
    "requests>=2.31.0",
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0.0", "pyarrow>=14.0.0"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "responses>=0.23.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["salesforce_datacloud_connector"]

[tool.pytest.ini_options]
markers = [
    "e2e: tests requiring a live Salesforce org (skipped in CI by default)",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
# DB-API 2.0 module globals (apilevel, threadsafety, paramstyle) intentionally
# precede the re-exports of the package's public API.
"salesforce_datacloud_connector/__init__.py" = ["E402"]
